--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "lint": "prettier --check \"src/**/*.{ts,js}\""
   },
   "dependencies": {
-    "canvas-confetti": "^1.2.0"
+    "canvas-confetti": "^1.3.3"
   },
   "devDependencies": {
-    "@snowpack/plugin-typescript": "^1.1.1",
+    "@snowpack/plugin-optimize": "^0.2.13",
+    "@snowpack/plugin-typescript": "^1.2.1",
     "@types/canvas-confetti": "^1.0.0",
     "@types/snowpack-env": "^2.3.2",
     "prettier": "^2.0.5",
     "snowpack": "^2.18.4",
+    "snowpack-plugin-webpack5": "^1.0.1",
     "typescript": "^4.0.0"
   }
 }
